--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -442,6 +442,7 @@ findbar:-moz-window-inactive {
 #PersonalToolbar {
     background-color: transparent !important;
     font-size: 11px !important;
+    height: 28px !important;
     .toolbarbutton-1 {
         height: 20px !important;
         margin: 4px 0px !important;
@@ -475,6 +476,7 @@ findbar:-moz-window-inactive {
 }
 
 :root:not([customizing]) #PersonalToolbar:nth-child(2) {
+    height: 26px !important;
     #PlacesToolbarItems,
     .toolbarbutton-1 {
         margin: 0px 0px 6px 0px !important;
