--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -35,11 +35,20 @@
     --toolbarbutton-border-radius: 5px !important;
     --toolbar-field-border-color: light-dark( rgba(0, 0, 0, .12), rgba(255, 255, 255, .12) ) !important;
     --toolbar-field-background-color: transparent !important;
+    @media (-moz-platform: macos) {
+        height: 52px !important;
+    }
+    @media (-moz-platform: windows) {
+        height: 40px !important;
+    }
+    @media (-moz-platform: linux) {
+        height: 40px !important;
+    }
 }
 
-#PanelUI-button {
-    @media (-moz-platform: macos){
-        padding-inline-end: var(--toolbar-start-end-padding) !important;
+:root[sizemode="normal"][tabsintitlebar] #navigator-toolbox {
+    @media (-moz-platform: windows) {
+        border-top: 1px solid transparent !important;
     }
 }
 
@@ -56,9 +65,6 @@
 }
 
 .titlebar-buttonbox {
-    @media (-moz-platform: windows) {
-        min-height: 40px !important;
-    }
     @media (-moz-platform: macos) {
         /*  Make same as Safari on Big Sur  */
         margin: 18px 11px 18px 19px !important;
@@ -76,9 +82,6 @@
 
 #urlbar, #searchbar {
     font-size: inherit !important;
-}
-
-#urlbar {
     top: calc((var(--urlbar-container-height) - var(--urlbar-height)) / 2) !important;
     left: 0 !important;
     width: 100% !important;
@@ -88,12 +91,12 @@
     --urlbar-box-focus-bgcolor: var(--button-background-color-hover) !important;
     --urlbar-box-hover-bgcolor: transparent !important;
     --urlbar-box-active-bgcolor: transparent !important;
+    --urlbar-icon-fill-opacity: 1 !important;
 }
 
 .urlbar-input-container {
     height: var(--urlbar-height) !important;
     padding: var(--urlbar-container-padding) !important;
-    --urlbar-icon-fill-opacity: 1 !important;
 }
 
 .urlbar-input, .searchbar-textbox {
@@ -191,6 +194,18 @@
     display: none !important;
 }
 
+#PanelUI-button {
+    @media (-moz-platform: macos){
+        padding-inline-end: var(--toolbar-start-end-padding) !important;
+    }
+    @media (-moz-platform: windows) {
+        padding-inline-end: var(--toolbarbutton-outer-padding) !important;
+    }
+    @media (-moz-platform: linux) {
+        padding-inline-end: var(--toolbarbutton-outer-padding) !important;
+    }
+}
+
 #PanelUI-menu-button {
     padding-inline-end: var(--toolbarbutton-outer-padding) !important;
 }
@@ -243,6 +258,10 @@ findbar:-moz-window-inactive {
 
 /* Tabs */
 
+#TabsToolbar-customization-target {
+    height: 28px !important;
+}
+
 #TabsToolbar {
     background-color: light-dark( rgba(0, 0, 0, .05), rgba(0, 0, 0, .46) ) !important;
     font-size: 13px !important;
@@ -286,6 +305,15 @@ findbar:-moz-window-inactive {
     }
 }
 
+#TabsToolbar-customization-target #search-container {
+	padding: 0 !important;
+	> #searchbar {
+		border-radius: 0 !important;
+		background-color: transparent !important;
+		border: 0 !important;
+	}
+}
+
 #scrollbutton-up,
 #scrollbutton-down {
     border: 0 !important;
@@ -296,22 +324,26 @@ findbar:-moz-window-inactive {
 
 .tabbrowser-tab,
 #scrollbutton-up,
+#tabbrowser-arrowscrollbox[overflowing] .tabbrowser-tab:nth-last-child(2),
 #tabbrowser-tabs:not(:last-child) #tabbrowser-arrowscrollbox[overflowing],
 #TabsToolbar-customization-target .toolbarbutton-1,
 #TabsToolbar-customization-target toolbarspring,
+#TabsToolbar-customization-target #search-container,
 #TabsToolbar-customization-target > #personal-bookmarks #PlacesToolbarItems > .bookmark-item,
 #TabsToolbar-customization-target > toolbarpaletteitem > #personal-bookmarks {
     border-right: solid 1px var(--tabbar-separator-color) !important;
 }
 
-#tabbrowser-tabs:last-child > #tabbrowser-arrowscrollbox:not([overflowing]) > .tabbrowser-tab:nth-last-child(2),
+#tabbrowser-tabs:last-child .tabbrowser-tab:nth-last-child(2),
 #TabsToolbar-customization-target > .toolbarbutton-1:last-child,
 #TabsToolbar-customization-target > .toolbaritem-combined-buttons:last-child > .toolbarbutton-1:last-child,
 #TabsToolbar-customization-target > toolbarspring:last-child,
+#TabsToolbar-customization-target > #search-container:last-child,
 #TabsToolbar-customization-target > #personal-bookmarks:last-child  #PlacesToolbarItems > .bookmark-item:last-child,
 #TabsToolbar-customization-target > toolbarpaletteitem:last-child > .toolbarbutton-1,
 #TabsToolbar-customization-target > toolbarpaletteitem:last-child > .toolbaritem-combined-buttons > .toolbarbutton-1:last-child,
 #TabsToolbar-customization-target > toolbarpaletteitem:last-child > toolbarspring,
+#TabsToolbar-customization-target > toolbarpaletteitem:last-child > #search-container,
 #TabsToolbar-customization-target > toolbarpaletteitem:last-child > #personal-bookmarks {
     border-right: none !important;
 }
