--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -59,6 +59,8 @@
     --toolbar-field-focus-background-color: var(--input-bgcolor) !important;
     --lwt-sidebar-background-color: light-dark(#FEFEFE, #1D1D1D) !important;
     --sidebar-background-color: light-dark(#FEFEFE, #1D1D1D) !important;
+    --toolbarbutton-icon-fill-attention-text: light-dark(#F1F1F1, #1D1D1D) !important;
+    --toolbar-field-background-color: light-dark(#F1F1F1, #1D1D1D) !important;
     --background-color-canvas: light-dark(#FFFFFF, #222222) !important;
     --background-color-box: light-dark(#FFFFFF, #272727) !important;
     --in-content-table-background: var(--background-color-box) !important;
