--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -19,9 +19,11 @@
     --tab-shadow-max-size: 0px !important;
     --tab-min-height: 28px !important;
     @media (-moz-platform: windows) {
+        /*  Make same as Windows 11  */
         --toolbox-non-lwt-bgcolor-inactive: light-dark(#F3F3F3, #202020) !important;
     }
     @media (-moz-platform: macos) {
+        /*  Make same as macOS Big Sur +  */
         --toolbox-non-lwt-bgcolor-inactive: light-dark(#F0F0F0, #282828) !important;
     }
     &:-moz-window-inactive {
@@ -32,23 +34,15 @@
 #nav-bar {
     background-color: transparent !important;
     font-size: 13px !important;
+    height: 42px !important;
     --toolbarbutton-border-radius: 5px !important;
     --toolbar-field-border-color: light-dark( rgba(0, 0, 0, .12), rgba(255, 255, 255, .12) ) !important;
     --toolbar-field-background-color: transparent !important;
-    @media (-moz-platform: macos) {
-        height: 52px !important;
-    }
-    @media (-moz-platform: windows) {
-        height: 40px !important;
-    }
-    @media (-moz-platform: linux) {
-        height: 40px !important;
-    }
-}
-
-:root[sizemode="normal"][tabsintitlebar] #navigator-toolbox {
-    @media (-moz-platform: windows) {
-        border-top: 1px solid transparent !important;
+    :root[tabsintitlebar] & {
+        @media (-moz-platform: macos) {
+            height: 52px !important;
+            --toolbar-start-end-padding: 12px !important;
+        }
     }
 }
 
@@ -56,35 +50,45 @@
     opacity: 1 !important;
 }
 
-.titlebar-button:hover {
-	background-color: var(--toolbarbutton-hover-background) !important;
-
-	&:active {
-		background-color: light-dark( rgba(0, 0, 0, .025), rgba(255, 255, 255, .045) ) !important;
-	}
-}
-
 .titlebar-buttonbox {
     @media (-moz-platform: macos) {
-        /*  Make same as Safari on Big Sur  */
-        margin: 18px 11px 18px 19px !important;
+        /*  Make same as Safari on Big Sur +  */
+        margin-inline: 19px 7px !important;
+    }
+    @media (-moz-platform: windows) {
+        /*  Make same as Windows 11  */
+        .titlebar-button:hover {
+            background-color: var(--toolbarbutton-hover-background) !important;
+            &:active {
+                background-color: light-dark( rgba(0, 0, 0, .025), rgba(255, 255, 255, .045) ) !important;
+            }
+        }
+        .titlebar-close:hover {
+            stroke: white;
+            background-color: #C42B1C !important;
+            &:active {
+                background-color: light-dark(#C84031, #B22A1B) !important;
+            }
+        }
     }
 }
 
-.titlebar-close:hover {
-	stroke: white;
-	background-color: #C42B1C !important;
-
-	&:active {
-		background-color: light-dark(#C84031, #B22A1B) !important;
-	}
+:root[sizemode="normal"][tabsintitlebar] {
+    /*  Windows has eaten the topmost pixel, now let's make it spit it out.  */
+    #navigator-toolbox {
+        @media (-moz-platform: windows) {
+            border-top: 1px solid transparent !important;
+        }
+    }
+    #urlbar[breakout-extend] {
+        @media (-moz-platform: windows) {
+            top: calc(((var(--urlbar-container-height) - var(--urlbar-height)) / 2) + 1px) !important;
+        }
+    }
 }
 
 #urlbar[breakout-extend] {
     top: calc((var(--urlbar-container-height) - var(--urlbar-height)) / 2) !important;
-    :root[sizemode="normal"][tabsintitlebar] & {
-        top: calc(((var(--urlbar-container-height) - var(--urlbar-height)) / 2) + 1px) !important;
-    }
 }
 
 #urlbar, #searchbar {
@@ -114,9 +118,17 @@
     margin-inline: 0 !important;
 }
 
+.searchbar-search-button{
+    opacity: 0.63 !important;
+}
+
 #identity-box[pageproxystate="invalid"] #identity-icon,
-.searchbar-search-button {
+.searchbar-search-icon {
     opacity: 0.5 !important;
+}
+
+#identity-box[pageproxystate="invalid"] > .identity-box-button {
+    padding-inline: calc(var(--urlbar-icon-padding) + 3px) var(--urlbar-icon-padding) !important;
 }
 
 #identity-box[pageproxystate="valid"]:is(.notSecureText, .chromeUI, .extensionPage) > .identity-box-button {
@@ -193,20 +205,12 @@
 
 /* Buttons */
 
-#private-browsing-indicator-with-label {
+.private-browsing-indicator-with-label {
     display: none !important;
 }
 
 #PanelUI-button {
-    @media (-moz-platform: macos){
-        padding-inline-end: var(--toolbar-start-end-padding) !important;
-    }
-    @media (-moz-platform: windows) {
-        padding-inline-end: var(--toolbarbutton-outer-padding) !important;
-    }
-    @media (-moz-platform: linux) {
-        padding-inline-end: var(--toolbarbutton-outer-padding) !important;
-    }
+    padding-inline-end: calc(var(--toolbar-start-end-padding) - var(--toolbarbutton-outer-padding)) !important;
 }
 
 #PanelUI-menu-button {
@@ -475,7 +479,7 @@ findbar:-moz-window-inactive {
 #PersonalToolbar {
     background-color: transparent !important;
     font-size: 11px !important;
-    height: 29px !important;
+    align-items: center !important;
     .toolbarbutton-1 {
         height: 20px !important;
         margin: 4px 0px !important;
@@ -508,20 +512,25 @@ findbar:-moz-window-inactive {
     }
 }
 
-:root:not([customizing]) #PersonalToolbar[bookmark-show="always"] {
-    height: 26px !important;
-    #PlacesToolbarItems,
-    .toolbarbutton-1 {
-        margin: 0px 0px 6px 0px !important;
+#PersonalToolbar[bookmark-show="always"] {
+    height: 28px !important;
+    margin-top: -5px !important;
+    margin-bottom: 2px !important;
+    :root[tabsintitlebar] & {
+        @media (-moz-platform: macos) {
+            margin-top: -7px !important;
+            margin-bottom: 5px !important;
+        }
     }
-    > .bookmark-item,
-    #PlacesToolbar > .bookmark-item {
-        margin: 0px 2px 6px 2px !important;
-    }
-    #personal-toolbar-empty-description {
-        margin: 0px 2px 2px 2px !important;
-        padding : 3px 4px 3px 4px !important;
-    }
+}
+
+#PersonalToolbar[bookmark-show="newtab"] {
+    height: 29px !important;
+	border-top: 1px solid var(--chrome-content-separator-color) !important;
+}
+
+#navigator-toolbox {
+  border-bottom: 1px solid var(--chrome-content-separator-color) !important;
 }
 
 #TabsToolbar-customization-target #personal-bookmarks {
@@ -565,14 +574,6 @@ findbar:-moz-window-inactive {
     #PlacesToolbarItems > toolbarseparator {
         padding: 4px !important;
     }
-}
-
-#PersonalToolbar[bookmark-show="newtab"] {
-	border-top: 1px solid var(--chrome-content-separator-color) !important;
-}
-
-#navigator-toolbox {
-  border-bottom: 1px solid var(--chrome-content-separator-color) !important;
 }
 
 /* menu bar */
