--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -1,123 +1,32 @@
-/*  Tested on Firefox 133.0.3  */
-
-/*  Delete this text to get the extensions button back.  */
-#unified-extensions-button {
-    display: none !important;
-}
-
-/*  Delete this text to get the menu button back. You can use the menu bar instead. If you want to open the settings, you can open the URL bar and find the button at the bottom right corner.  */
-#PanelUI-menu-button {
-    display: none !important;
-}
-
-/*  Delete this text to get the star button back in the URL bar. You can also access the same function by right-clicking on the tab or the page.  */
-#star-button-box{
-    display: none !important;
-}
-
-/*  Delete this text to get Firefox default text color (especially it will appear darker in light mode). */
-:root {
-    --input-color: light-dark( rgba(0, 0, 0, .8), rgb(255, 255, 255) ) !important;
-    --toolbox-non-lwt-textcolor: var(--input-color) !important;
-    --lwt-text-color: var(--input-color) !important;
-    --button-text-color: var(--input-color) !important;
-    --urlbarView-highlight-color: var(--input-color) !important;
-    --arrowpanel-color: var(--input-color) !important;
-    --sidebar-text-color: var(--input-color) !important;
-    --tab-selected-textcolor: var(--input-color) !important;
-    --toolbar-color: var(--input-color) !important;
-    --toolbar-field-color: var(--input-color) !important;
-    --toolbar-field-focus-color: var(--input-color) !important;
-    --newtab-text-primary-color: var(--input-color) !important;
-    --newtab-contextual-text-primary-color: var(--input-color) !important;
-    --toolbar-non-lwt-textcolor: var(--input-color) !important;
-    --toolbox-non-lwt-textcolor-inactive: var(--input-color) !important;
-    --panel-banner-item-color: var(--input-color) !important;
-    --button-text-color-hover: var(--input-color) !important;
-    --button-text-color-active: var(--input-color) !important;
-    --button-text-color-disabled: var(--input-color) !important;
-    --button-text-color-ghost: var(--input-color) !important;
-    --toolbar-color: var(--input-color) !important;
-    @media (prefers-color-scheme: dark) {
-        --toolbar-color: rgb(255, 255, 255) !important;
+@-moz-document url-prefix("about:") {
+    :root {
+        --newtab-text-primary-color: var(--button-text-color) !important;
+        --newtab-contextual-text-primary-color: var(--button-text-color) !important;
+        --newtab-primary-action-background: var(--color-accent-primary) !important;
+        --newtab-button-background: transparent !important;
+        --newtab-element-hover-color: var(--button-background-color-hover) !important;
+        --newtab-element-active-color: var(--button-background-color-active) !important;
+        --newtab-button-static-background: light-dark(#F6F6F6, #3C3C3C) !important;
+        --newtab-button-static-hover-background: light-dark(#EFEFEF, #424242) !important;
+        --newtab-button-static-active-background: light-dark(#E0E0E0, #4E4E4E) !important;
+        --newtab-background-color: light-dark(#FEFEFE, #363636) !important;
+        --newtab-background-color-secondary: light-dark(#FFFFFF, #444444) !important;
+        --background-color-canvas: light-dark(#FFFFFF, #222222) !important;
+        --background-color-box: light-dark(#FFFFFF, #272727) !important;
+        --button-text-color: light-dark( rgba(0, 0, 0, .8), rgb(255, 255, 255) ) !important;
+        --button-text-color-hover: var(--button-text-color) !important;
+        --button-text-color-active: var(--button-text-color) !important;
+        --button-text-color-disabled: var(--button-text-color) !important;
+        --button-background-color: light-dark( rgba(0, 0, 0, .03), rgba(255, 255, 255, .03) ) !important;
+        --button-background-color-hover: light-dark( rgba(0, 0, 0, .06), rgba(255, 255, 255, .06) ) !important;
+        --button-background-color-active: light-dark( rgba(0, 0, 0, .12), rgba(255, 255, 255, .12) ) !important;
+        --button-background-color-disabled: var(--button-background-color) !important;
+        --button-bgcolor: var(--button-background-color) !important;
+        --button-hover-bgcolor: var(--button-background-color-hover) !important;
+        --button-active-bgcolor: var(--button-background-color-active) !important;
+        --color-accent-primary: light-dark(#2266EE, #50A6FA) !important;
+        --focus-outline-color: var(--color-accent-primary) !important;
+        --link-color: light-dark(#0360E5, #25A0FF) !important;
+        --link-color-visited: var(--link-color) !important;
     }
-}
-
-/*  Delete all text below to get Firefox default background color (especially it will appear slightly bluish in dark mode).  */
-:root {
-    --button-background-color: light-dark( rgba(0, 0, 0, .03), rgba(255, 255, 255, .03) ) !important;
-    --button-background-color-hover: light-dark( rgba(0, 0, 0, .06), rgba(255, 255, 255, .06) ) !important;
-    --button-background-color-active: light-dark( rgba(0, 0, 0, .12), rgba(255, 255, 255, .12) ) !important;
-    --newtab-button-background: transparent !important;
-    --panel-banner-item-background-color: var(--button-background-color) !important;
-    --button-background-color-disabled: var(--button-background-color) !important;
-    --newtab-element-hover-color: var(--button-background-color-hover) !important;
-    --panel-item-hover-bgcolor: var(--button-background-color-hover) !important;
-    --panel-banner-item-hover-bgcolor: var(--button-background-color-hover) !important;
-    --toolbarbutton-hover-background: var(--button-background-color-hover) !important;
-    --button-background-color-ghost-hover: var(--button-background-color-hover) !important;
-    --newtab-element-active-color: var(--button-background-color-active) !important;
-    --panel-item-active-bgcolor: var(--button-background-color-active) !important;
-    --panel-banner-item-active-bgcolor: var(--button-background-color-active) !important;
-    --toolbarbutton-active-background: var(--button-background-color-active) !important;
-    --button-background-color-ghost-active: var(--button-background-color-active) !important;
-    --newtab-button-static-background: light-dark(#F6F6F6, #3C3C3C) !important;
-    --newtab-button-static-hover-background: light-dark(#EFEFEF, #424242) !important;
-    --newtab-button-static-active-background: light-dark(#E0E0E0, #4E4E4E) !important;
-    --toolbar-bgcolor: light-dark(#FEFEFE, #363636) !important;
-    --input-bgcolor: light-dark(#FFFFFF, #444444) !important;
-    --tabpanel-background-color: var(--toolbar-bgcolor) !important;
-    --newtab-background-color: var(--toolbar-bgcolor) !important;
-    --toolbar-non-lwt-bgcolor: var(--toolbar-bgcolor) !important;
-    --button-text-color-primary: var(--toolbar-bgcolor) !important;
-    --tab-selected-bgcolor: var(--toolbar-bgcolor) !important;
-    --button-text-color-primary-hover: var(--toolbar-bgcolor) !important;
-    --button-text-color-primary-disabled: var(--toolbar-bgcolor) !important;
-    --newtab-background-color-secondary: var(--input-bgcolor) !important;
-    --arrowpanel-background: var(--input-bgcolor) !important;
-    --toolbar-field-focus-background-color: var(--input-bgcolor) !important;
-    --urlbarView-result-button-hover-color: var(--input-bgcolor) !important;
-    --toolbar-field-background-color: light-dark(rgba(0, 0, 0, .05), rgba(0, 0, 0, .3)) !important;
-    --toolbarbutton-icon-fill-attention-text: var(--toolbar-field-background-color) !important;
-    --lwt-sidebar-background-color: light-dark(#FEFEFE, #1D1D1D) !important;
-    --sidebar-background-color: light-dark(#FEFEFE, #1D1D1D) !important;
-    --background-color-canvas: light-dark(#FFFFFF, #222222) !important;
-    --background-color-box: light-dark(#FFFFFF, #272727) !important;
-    --in-content-table-background: var(--background-color-box) !important;
-    --chrome-content-separator-color: light-dark( rgba(0, 0, 0, .1), rgba(0, 0, 0, .6) ) !important;
-    --toolbarbutton-icon-fill: light-dark( rgba(0, 0, 0, .555), rgba(255, 255, 255, .637) ) !important;
-    --toolbarbutton-disabled-opacity: .3 !important;
-    --color-accent-primary: light-dark(#2266EE, #50A6FA) !important;
-    --newtab-primary-action-background: var(--color-accent-primary) !important;
-    --focus-outline-color: var(--color-accent-primary) !important;
-    --accent-color: var(--color-accent-primary) !important;
-    --button-background-color-primary: var(--color-accent-primary) !important;
-    --link-color: light-dark(#0360E5, #25A0FF) !important;
-    --link-color-visited: var(--link-color) !important;
-    --toolbarbutton-icon-fill-attention: light-dark(#003CCA, #5EA9FF) !important;
-    --download-progress-fill-color: light-dark(#3A80F7, #3267DE) !important;
-    --tab-loading-fill: light-dark(#3A80F7, #3267DE) !important;
-}
-
-@media (-moz-platform: windows) and (prefers-color-scheme: dark) {
-    .urlbar-input:focus::selection,
-    .searchbar-textbox:focus-within::selection {
-        background-color: #0078D7 !important;
-  }
-}
-
-menupopup:not(.toolbar-menupopup):not([placespopup="true"]) {
-    --panel-background: light-dark(#FAFAFA, #2D2D2D) !important;
-    menu, menuitem {
-        &:where([_moz-menuactive]:not([disabled="true"])) {
-            background-color: var(--button-background-color-active) !important;
-        }
-        &:where([_moz-menuactive="true"][disabled="true"]) {
-            background-color: transparent !important;
-        }
-    }
-}
-
-tooltip {
-    background-color: light-dark(#FAFAFA, #2B2B2B) !important;
 }
