Add support for UI density

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -415,6 +415,7 @@ tooltip {
     }
 }
 
+#private-browsing-indicator-with-label,
 .private-browsing-indicator-with-label {
     display: none !important;
 }
